k8s/ingress/ingress-dev.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        -
      secretName: nginx-tls-secret
  rules:
  - host:
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName:
          servicePort: 80
